--- a/style.css
+++ b/style.css
@@ -11,3 +11,56 @@
     width: 1080px;
     height: 720px;
 }
+
+ /*about resume.html*/
+
+.line{
+    border-bottom: 1px solid #000;
+    width: 480px;
+}
+.line2{
+    border-bottom: 1px solid #000;
+    width: 250px;
+}
+.line3{
+    border-bottom: 1px solid #000;
+    width: 760px;
+}
+ .main_div{
+     width: 840px;
+     height: 1188px;
+     background: rgb(210,210,210);
+     margin: auto;
+     box-shadow: 0px 0px 10px 5px #555;
+ }
+.image_div{
+    position: relative;
+    width: 240px;
+    height: 320px;
+    left: 40px;
+    top: 40px;
+    background: rgb(0,0,0);
+}
+.info1{
+    position: relative;
+    left: 320px;
+    top: -300px;
+}
+.info2{
+    position: relative;
+    width: 250px;
+    height: 200px;
+    left:40px;
+    top: -420px;
+}
+.info3{
+    position: relative;
+    left:40px;
+    top: -400px;
+    width: 240px;
+}
+.info4{
+    position: relative;
+    left:40px;
+    top:-400px;
+}
